# prodlog

./: Cargo.toml  LICENSE  README.md  build-react.sh  build.rs  prodlog  prodlog.sh  prodlog_client.sh  prodlog_ui  requirements.txt
.cursor/rules/: my-rules.mdc
old-ai-generated-version/: prodlog
react-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
react-ui/src/: api.ts  main.tsx  styles.css  types.ts
react-ui/src/components/: DateRangePicker.tsx  EntryPage.tsx  IndexPage.tsx  RedactPage.tsx  TaskGroup.tsx  TaskManager.tsx
rust/prodlog/: Cargo.toml  prodlog_rs
rust/prodlog/src/: main.rs
src/: config.rs  helpers.rs  main.rs  model.rs  ui.rs
src/sinks/: json.rs  mod.rs  obsidian.rs  sqlite.rs
src/ui/: ansi_to_html.rs  detail.rs  entry.rs  index.rs  mod.rs  resources.rs  rest.rs  save.rs  static_files.rs
src/ui/pages/: entry.rs  index.rs  mod.rs  redact.rs
src/ui/pages/entry/: common.rs  diff.rs  edit.rs  mod.rs  output.rs
src/ui/static/: entry.css  index.css  prodlog.css  prodlog.js
src/ui/static/react/: index.html
src/ui/static/react/assets/: index-1170088c.css  index-182b0367.css  index-1b787323.css  index-290fbb86.js  index-2e23f5c9.css  index-2f58bb5e.js  index-307ef90a.css  index-3ba6eaa5.js  index-3c6845e3.css  index-45a23627.js  index-49155dbd.js  index-531fc691.js  index-5955b703.js  index-64217eaa.js  index-64f53d60.js  index-6c9c22c8.css  index-73f576b4.js  index-7788c587.css  index-7ddf3eeb.js  index-7df9a7e4.css  index-8a52349c.css  index-9da8ce29.js  index-ad9ff102.js  index-be58dbfe.css  index-ede59d97.js  index-ef72387a.js  index-f030f5cc.js  index-f5e7ca9b.css  index-f83d8f5c.js
