[package]
name = "prodlog"
version = "2.4.7"
edition = "2021"
authors = ["Niels Reijers <prodlog@mail.nielsreijers.com>"]
description = "A tool for logging and viewing terminal output with a web interface"
license-file = "LICENSE"
repository = "https://github.com/nielsreijers/prodlog"
keywords = ["terminal", "logging"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "prodlog_record"
path = "src/main.rs"

[dependencies]
axum = "0.7"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
dirs = "5.0"
libc = "0.2.172"
nix = { version = "0.29.0", features = ["fs", "ioctl", "process", "term"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
subprocess = "0.2.9"
termion = "4.0.5"
tokio = { version = "1.44.2", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
vte = "0.15.0"
rusqlite = { version = "0.31", features = ["chrono"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
serde_with = { version = "3.12.0", features = ["base64"] }
similar = "2.7.0"
html-escape = "0.2.13"
include_dir = "0.7"
whoami = "1.5.1"
